# ZnTrackNodes

./: README.md  pyproject.toml
tests/: test_helloworld.py
zntracknodes/helloworld/: __init__.py  random_number.py  tensorflow_mnist.py
